# cloud-video-call

./: .bazelignore  .bazelrc  .eslintrc.json  .gitignore  .prettierignore  .prettierrc  .tmuxinator.yml  BUILD.bazel  Dockerfile  Makefile  README.md  WORKSPACE  WORKSPACE.bazel  arch.drawio  arch.old.drawio  deploy.sh  deps.bzl  docker-compose.yaml  firebase.json  flutter_version_update.py  go.work  go.work.sum  images.sh  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  repositories.bzl  wsl_minikube_setup.sh
client/: .firebaserc  package-lock.json  package.json
common/: .gitignore  BUILD.bazel  package-lock.json  package.json  pnpm-lock.yaml  test.ts  tsconfig.json
common-messaging/: BUILD.bazel  gen_proto.sh  package-lock.json  package.json
common-messaging/proto/: BUILD.bazel  data.proto  neo4j.proto  rabbitmq.proto
common-messaging/src/: index.ts  message_helper.ts  utils.ts  variables.js  variables.ts
common-messaging/test/: test.ts
common/src/: chat.ts  exceptions.ts  index.js  index.ts  logger.ts  neo4j.ts  s3.ts  types.ts  utils.ts  variables.ts
common/test/: index.test.ts  index.ts
data-service/: BUILD.bazel  Dockerfile  go.mod  go.sum  helpers.go  main.go  package.json  push.sh
data-service/src/: UserPreferences.ts  data-service.ts  metrics.ts  milvus.ts  utils.ts
data-test/: BUILD.bazel  Makefile  docker-compose.yml  dumpdb.bash  package.json  tsconfig.json
data-test/resources/: neo4j-service.yaml
data-test/src/: consine_worker.ts  index.ts  lp_pipeling.ts  milvus.ts  milvus_test.ts  mulvis_functions.ts  neo4j_functions.ts  nodembeddings_flow.ts  run_neo4j.ts
feedback/: package-lock.json  package.json
flutter_app/: .gitignore  Makefile  chat_state_map.drawio  flutter_native_splash.yaml  pubspec.yaml
functions/: .gitignore  Dockerfile  nodemon.json  package-lock.json  package.json
grafana/: Dockerfile  Makefile  copyfiles.sh
k6/: Makefile  babel.config.json  package-lock.json  package.json  pnpm-lock.yaml  run-kube.sh  run-local.sh  webpack.config.js
k8/: .gitignore  Makefile  audit-policy.yaml  grafana-deployment.yaml  grafana-service.yaml  kafka-deployment.yaml  kafka-service.yaml  kafka-strimzi.yaml  knative-cert.yaml  knative-operator.yaml  knative.yaml  matcher-service.yaml  matchmaker-deployment.yaml  matchmaker-service.yaml  milvus.values.yaml  neo4j.values.yaml  nginx-deployment.yaml  nginx-service.yaml  nsf-deployment.yaml  prometheus-deployment.yaml  rabbitmq-deployment.yaml  (+9 more)
matcher/: BUILD.bazel  Dockerfile  package-lock.json  package.json  pnpm-lock.yaml  test.ts  tsconfig.json
matcher/src/: functions.ts  iceservers.ts  index.ts  match-worker.ts  matcher.ts  notifications.ts
matchmaker/: BUILD.bazel  Dockerfile  matchmaker-flow.drawio  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
matchmaker-event/: BUILD.bazel  Dockerfile  matchmaker-flow.drawio  package.json
matchmaker-event/src/: matchmaker-event.ts  matchmaker.ts  relationship_calculations.ts
matchmaker-event/test/: index.test.ts
matchmaker/src/: consume.ts  index.ts  kafka-consumer.ts  matchmaker.ts  produce.ts  ready-worker.ts  relationship_calculations.ts  score_threshold.ts  types.ts
matchmaker/test/: index.test.ts
neo4j/: BUILD.bazel  Makefile  docker-composde.yml  docker-compose.yml  install.sh  k8.values.yaml  package-lock.json  package.json  pnpm-lock.yaml  score-prediction.drawio  tsconfig.json
neo4j-jobs/: BUILD.bazel  Dockerfile  package.json
neo4j-jobs/src/: index.ts  job.ts  neo4j-jobs.ts
neo4j/neo4j-client/: package-lock.json  package.json
neo4j/neo4j-client/src/: index.ts
neo4j/neo4j-common/: gen_proto.sh  package-lock.json  package.json  tsconfig.json
neo4j/neo4j-common/protos/: helloworld copy.proto  helloworld.proto  neo4j.proto
neo4j/neo4j-common/src/: index.ts
neo4j/neo4j-grpc-client/: package-lock.json  package.json
neo4j/neo4j-grpc-client/src/: index.ts
neo4j/neo4j-grpc-common/: BUILD.bazel  gen_proto.sh  package-lock.json  package.json  pnpm-lock.yaml
neo4j/neo4j-grpc-common/protos/: neo4j.proto
neo4j/neo4j-grpc-common/src/: health_grpc_pb.d.ts  index.ts  neo4j_grpc_pb.d.ts  neo4j_grpc_pb.js  neo4j_pb.d.ts  neo4j_pb.js
neo4j/neo4j-grpc-common/src/proto_gen/: neo4j_pb.js
neo4j/neo4j-grpc-server/: BUILD.bazel  Dockerfile  package-lock.json  package.json  pnpm-lock.yaml
neo4j/neo4j-grpc-server/src/: index.ts  neo4j-grpc-server.ts
neo4j/neo4j-jobs/: BUILD.bazel  Dockerfile  package-lock.json  package.json  pnpm-lock.yaml
neo4j/neo4j-jobs/src/: functions.ts  index.ts  priority-score-job.ts  similarity-score-job.ts
neo4j/neo4j-server/: package-lock.json  package.json  tsconfig.json
neo4j/neo4j-server/my_generated_code/: helloworld_grpc_pb.d.ts
neo4j/neo4j-server/proto/: greeter.proto
neo4j/neo4j-server/proto-gen/proto/: greeter.client.ts  greeter.ts
neo4j/neo4j-server/src/: client.ts  index.ts
neo4j/resources/: neo4j-claim0-persistentvolumeclaim.yaml  neo4j-deployment.yaml
neo4j/src/: chart.ts  consine_worker.ts  flow.ts  functions.ts  index.ts  lp_pipeling.ts  neo4j_functions.ts  neo4j_index.ts  nodembeddings_flow.ts  person.ts
options-service/: BUILD.bazel  Dockerfile  package.json
options-service/src/: options-service.ts  options.ts
puppeteer/: .gitignore  BUILD.bazel  Dockerfile  Makefile  curl.sh  deployment.yaml  docker-compose.yaml  hola-proxy.sh  package-lock.json  package.json  parse.py  readme.md  screencast.sh  startup.sh
puppeteer/resources/: deployment.yaml  storage.yaml
puppeteer/src/: browser.ts  metrics.ts  omegle.ts  parse.ts  test-webcam.ts  test.ts
puppeteer/tests/test1/: notes.md
puppeteer/tests/test2/: proxy.txt  real.txt
socketio-event/: BUILD.bazel  Dockerfile  example1.js  example1.ts  example2.js  example2.ts  main.ts  my_dep.ts  package-lock.json  package.json  tsconfig.json
socketio-event/src/: notifications.ts  socketio-event.ts
socketio-service/: BUILD.bazel  Dockerfile  package.json
socketio-service/src/: authentication.ts  management.ts  postStart.ts  socketio-service.ts  socketio_server.ts
(+362 files in other folders)
