load("@npm//:defs.bzl", "npm_link_all_packages")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

npm_link_all_packages(
    name = "node_modules",
)

filegroup(
    name = "js_files",
    srcs = glob(["src/**/*.js"]),
)

ts_project(
    name = "ts",
    srcs = glob(["src/**/*.ts"]),
    data = [":js_files"],
    declaration = True,
    out_dir = ".",
    visibility = ["//visibility:public"],
    deps = [
        ":node_modules",
    ],
)

js_library(
    name = "lib",
    srcs = [
        "package.json",
        ":ts",
    ],
)

npm_package(
    name = "common-messaging",
    srcs = [":lib"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "common-messaging-go-proto-library",
    importpath = "common-messaging",
    protos = [":common-messaging-proto"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "common-messaging-go-library",
    embed = [":common-messaging-go-proto-library"],
    importpath = "common-messaging",
    visibility = ["//visibility:public"],
)
