load("@npm//:defs.bzl", "npm_link_all_packages")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@aspect_rules_js//js:defs.bzl", "js_binary")
load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("@aspect_rules_js//js:defs.bzl", "js_library")


npm_link_all_packages(
    name = "node_modules",
)


ts_project(
    name = "ts",
    srcs = glob(["src/**/*.ts",]),
    declaration = True,
    out_dir = ".",
    visibility = ["//visibility:public"],
    deps = [
        ":node_modules",
    ],
)


js_library(
    name = "lib",
    srcs = [
        ":ts","package.json"
    ],
)

npm_package(
    name = "common",
    srcs = [":lib"],
    visibility = ["//visibility:public"],
)


load("@aspect_rules_jest//jest:defs.bzl", "jest_test")

ts_project(
    name = "test_ts",
    srcs = [":ts"] + glob(["test/**/*.ts",]),
    declaration = True,
    out_dir = ".",
)

jest_test(
    name = "test",
    data = [":test_ts"],
    colors= False,
    node_modules = "//:node_modules",
)