load("@aspect_rules_swc//swc:defs.bzl", "swc")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("@aspect_rules_js//js:defs.bzl", "js_library")

npm_link_all_packages(
    name = "node_modules",
)

ts_project(
    name = "ts",
    srcs = glob(["src/**/*.ts"]),
    declaration = True,
    out_dir = ".",
    transpiler = swc,
    visibility = ["//visibility:public"],
    deps = [
        ":node_modules",
    ],
)

js_library(
    name = "lib",
    srcs = [
        "package.json",
        ":ts",
    ],
)

npm_package(
    name = "common",
    srcs = [":lib"],
    visibility = ["//visibility:public"],
)

load("@aspect_rules_jest//jest:defs.bzl", "jest_test")

ts_project(
    name = "test_ts",
    srcs = [":ts"] + glob(["test/**/*.ts"]),
    declaration = True,
    out_dir = ".",
    transpiler = swc,
)

jest_test(
    name = "test",
    colors = False,
    data = [":test_ts"],
    node_modules = "//:node_modules",
)
