load("@npm//:defs.bzl", "npm_link_all_packages")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@aspect_rules_js//js:defs.bzl", "js_binary")
load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("@aspect_rules_js//js:defs.bzl", "js_library")

npm_link_all_packages(
    name = "node_modules",
)

ts_project(
    name = "ts",
    srcs = glob(["src/**/*.ts"]),
    declaration = True,
    out_dir = ".",
    source_map = True,
    visibility = ["//visibility:public"],
    deps = [
        ":node_modules",
    ],
)

js_binary(
    name = "binary_milvus",
    data = [":ts"],
    entry_point = "src/milvus_test.js",
)

js_binary(
    name = "binary_neo4j",
    data = [":ts"],
    entry_point = "src/run_neo4j.js",
)

js_library(
    name = "lib",
    srcs = [
        "package.json",
        ":ts",
    ],
)

npm_package(
    name = "data-test",
    srcs = [":lib"],
    visibility = ["//visibility:public"],
)
