load("@aspect_rules_swc//swc:defs.bzl", "swc")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@aspect_rules_js//js:defs.bzl", "js_binary")

npm_link_all_packages(
    name = "node_modules",
)

ts_project(
    name = "ts",
    srcs = glob(["src/**/*.ts"]),
    declaration = True,
    out_dir = ".",
    transpiler = swc,
    deps = [
        ":node_modules",
    ],
)

js_binary(
    name = "matchmaker-event",
    data = [":ts"],
    entry_point = "src/matchmaker-event.js",
)

load("@aspect_rules_js//js:defs.bzl", "js_image_layer")
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")
load("@io_bazel_rules_docker//container:layer.bzl", "container_layer")

js_image_layer(
    name = "layers",
    binary = ":matchmaker-event",
    root = "/app",
    visibility = ["//visibility:__pkg__"],
)

filegroup(
    name = "app_tar",
    srcs = [":layers"],
    output_group = "app",
)

container_layer(
    name = "app_layer",
    tars = [":app_tar"],
)

filegroup(
    name = "node_modules_tar",
    srcs = [":layers"],
    output_group = "node_modules",
)

container_layer(
    name = "node_modules_layer",
    tars = [":node_modules_tar"],
)

container_image(
    name = "image",
    architecture = "amd64",
    base = "@debian_amd64//image",
    cmd = ["/app/matchmaker-event/matchmaker-event"],
    entrypoint = ["bash"],
    layers = [
        ":app_layer",
        ":node_modules_layer",
    ],
)

container_push(
    name = "image_push",
    format = "Docker",
    image = ":image",
    registry = "ghcr.io",
    repository = "andrew-delph/video-call-matchmaker-event",
    tag = "latest",
)

load("@aspect_rules_jest//jest:defs.bzl", "jest_test")

ts_project(
    name = "test_ts",
    srcs = [":ts"] + glob(["test/**/*.ts"]),
    declaration = True,
    out_dir = ".",
    transpiler = swc,
)

jest_test(
    name = "test",
    colors = False,
    data = [":test_ts"],
    node_modules = "//:node_modules",
)
