load("@aspect_rules_js//js:defs.bzl", "js_binary", "js_image_layer")
load("@aspect_rules_swc//swc:defs.bzl", "swc")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")
load("@io_bazel_rules_docker//container:layer.bzl", "container_layer")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push")

npm_link_all_packages(
    name = "node_modules",
)

ts_project(
    name = "ts",
    srcs = glob(["src/**/*.ts"]),
    declaration = True,
    out_dir = ".",
    transpiler = "tsc",
    deps = [
        ":node_modules",
    ],
)

js_binary(
    name = "socketio-event",
    copy_data_to_bin = True,
    data = [":ts"],
    entry_point = "src/socketio-event.js",
)

ts_project(
    name = "ts2",
    srcs = glob(["*.ts"]),
    # srcs = [
    #     "src/test.ts",
    # ],
    declaration = True,
    # out_dir = ".",
    transpiler = "tsc",
    deps = [
        ":node_modules",
    ],
)

js_binary(
    name = "btest",
    copy_data_to_bin = True,
    data = [
        ":node_modules",
        ":package.json",
        ":ts2",
    ],

    # entry_point = "src/socketio-event.js",
    entry_point = "example2.js",
)

js_image_layer(
    name = "layers",
    binary = ":socketio-event",
    root = "/app",
    visibility = ["//visibility:__pkg__"],
)

filegroup(
    name = "app_tar",
    srcs = [":layers"],
    output_group = "app",
)

container_layer(
    name = "app_layer",
    tars = [":app_tar"],
)

filegroup(
    name = "node_modules_tar",
    srcs = [":layers"],
    output_group = "node_modules",
)

container_layer(
    name = "node_modules_layer",
    tars = [":node_modules_tar"],
)

# container_image(
#     name = "image",
#     architecture = "amd64",
#     base = "@debian_amd64//image",
#     cmd = ["/app/socketio-event/socketio-event"],
#     entrypoint = ["bash"],
#     layers = [
#         ":app_layer",
#         ":node_modules_layer",
#     ],
# )

# container_push(
#     name = "image_push",
#     format = "Docker",
#     image = ":image",
#     registry = "ghcr.io",
#     repository = "andrew-delph/video-call-socketio-event",
#     tag = "latest",
# )

oci_image(
    name = "image",
    architecture = "amd64",
    cmd = ["/app/socketio-event/socketio-event"],
    entrypoint = ["bash"],
    os = "linux",
    tars = [
        ":layers",
    ],
)

platform(
    name = "linux_amd64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

platform(
    name = "linux_arm64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:arm64",
    ],
)

js_image_layer(
    name = "layersz",
    binary = ":socketio-event",
    platform = select({
        "@platforms//cpu:arm64": ":linux_arm64",
        "@platforms//cpu:x86_64": ":linux_amd64",
    }),
    root = "/app",
    visibility = ["//visibility:__pkg__"],
)

oci_image(
    name = "imagez",
    # Since js_binary depends on bash we have to bring in a base image that has bash
    base = "@debian",
    # This is going to be /{root of js_image_layer}/{package_name()}/{name of js_binary}
    cmd = ["/app/socketio-event/socketio-event"],
    entrypoint = ["bash"],
    tars = [
        ":layersz",
    ],
    visibility = ["//visibility:public"],
)

oci_push(
    name = "image_pushz",
    image = ":imagez",
    repository = "ghcr.io/andrew-delph/video-call-socketio-eventzz",
    tags = ["latest"],
)
